--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -21,12 +21,15 @@
   }
   .post-preview__image {
     @include media-breakpoint-down(md) {
-      width: 70%;
+      width: 100%;
+      max-width: 470px;
+      object-fit: cover;
       margin: 0 auto;
+      max-height: 275px;
     }
     @include media-breakpoint-down(sm) {
       width: 100%;
-
+      height: 190px;
     }
   }
 }
