add article list for main

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@
 //Editor quilljs
 @import "node_modules/quill/dist/quill.core";
 @import "node_modules/quill/dist/quill.snow";
-
+//@import "node_modules/quill-emoji/dist/quill-emoji";
 @import "overrides/index";
 @import "components";
 
