--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $black-200: #2C2C2C;
 $green: #54B869;
 $gray: #CFC5C5;
 $gray-200: #ECECEC;
+$gray-300: #E9E9E9;
 $gray-400: #E6E7EA;
 $gray-600: #B4B7BD;
 $white: #fff;
