--- a/src/styles/components/comments/comments-item.scss
+++ b/src/styles/components/comments/comments-item.scss
@@ -1,8 +1,22 @@
 @import "../../theme-base";
+.comments-list {
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: $spacer / 2;
+  @include media-breakpoint-down(sm) {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
+
 .comments-item {
   padding: 30px;
   background-color: $white-200;
   border-radius: $border-radius-sm;
+  @include media-breakpoint-down(sm) {
+    padding: 20px;
+
+  }
 }
 .comments-card {
   &__header {
@@ -30,20 +44,30 @@
   }
   &__date {
     display: flex;
+    @include media-breakpoint-down(sm) {
+      flex-wrap: wrap;
+    }
   }
   &__footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
   &__text {
     font-weight: $font-weight-medium;
     color: $blue-dark;
+    @include media-breakpoint-down(sm) {
+      font-size: $font-size-sm;
+    }
   }
 }
 
 .comments-card__comments-inner {
   padding-left: 50px;
+  @include media-breakpoint-down(sm) {
+    padding-left: 20px;
+  }
   .comments-card {
     padding-top: 30px;
     border-top: 1px solid $gray-400;
