--- a/src/styles/components/labels/label.scss
+++ b/src/styles/components/labels/label.scss
@@ -18,8 +18,6 @@
       color: $value;
       border-color: $value;
     }
-  }
-  @each $color, $value in $theme-colors {
     &_text-#{$color} {
       color: $value;
     }
@@ -62,14 +60,39 @@
 
 .label-fill {
   font-size: $font-size-sm;
-  padding: 15px 19px;
+  padding: 16.5px 19px;
   letter-spacing: normal;
   border-radius: $border-radius;
   @each $color, $value in $theme-colors {
     &_#{$color} {
-      background-color: rgba($value, $bth-light-alpha);
+      background-color: rgba($value, $bth-light-alpha-2);
       border: none;
+      transition: background-color .2s;
+      @include hover-focus() {
+        transition: background-color .2s;
+        background-color: rgba($value, $bth-light-alpha);
+        color: $value;
+        text-decoration: none;
+      }
+
+      &.active {
+        background-color: $value;
+        color: $white;
+      }
+      &.no-hover {
+        background-color: rgba($value, $bth-light-alpha-2);
+      }
     }
+  }
+  @include media-breakpoint-down(sm) {
+    font-size: $font-size-ms;
+    padding: 14px 17.5px;
+  }
+}
+
+.labels-sm {
+  .label-fill {
+    max-width: 88px;
   }
 }
 
