--- a/src/styles/overrides/overrides.scss
+++ b/src/styles/overrides/overrides.scss
@@ -227,5 +227,17 @@ h1, .h1 {
   }
 }
 
+.dropdown-menu > li:hover > .submenu {
+  display: block;
+}
+@include media-breakpoint-up(md) {
+  .nav-item .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+  }
+}
+
 
 
