--- a/src/styles/components/comments/comments-item.scss
+++ b/src/styles/components/comments/comments-item.scss
@@ -57,9 +57,9 @@
   &__text {
     font-weight: $font-weight-medium;
     color: $blue-dark;
-    @include media-breakpoint-down(sm) {
-      font-size: $font-size-sm;
-    }
+  }
+  &__nav {
+    display: flex;
   }
 }
 
