--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -13,8 +13,8 @@
 @import "labels/label";
 @import "buttons/buttons";
 @import "buttons/btn-icon";
-@import "comments/comments-base";
-@import "comments/comments-item";
+@import "comments";
+
 @import "widget";
 @import "tabs.menu";
 @import "section";
