--- a/src/styles/components/posts/post-preview.scss
+++ b/src/styles/components/posts/post-preview.scss
@@ -273,7 +273,7 @@
     }
   }
   &__author {
-    color: $blue-dark;
+    color: $gray;
     font-weight: $font-weight-medium;
     padding-left: 15px;
     padding-right: 10px;
