--- a/src/styles/components/posts/post-header.scss
+++ b/src/styles/components/posts/post-header.scss
@@ -39,6 +39,6 @@
   display: flex;
   align-items: center;
   @include media-breakpoint-down(sm) {
-    font-size: $font-size-base;
+    font-size: $font-size-md;
   }
 }
