--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -50,7 +50,7 @@ $tag-border-radius: 7rem / $font-size-value;
 $avatar-radius: 7rem / $font-size-value;
 
 
-
+$border-radius-zero: 0;
 $btn-border-radius:           $border-radius !default;
 $btn-border-radius-lg:        $border-radius-lg !default;
 $btn-border-radius-sm:        $border-radius-sm !default;
