--- a/src/styles/overrides/dropdown.scss
+++ b/src/styles/overrides/dropdown.scss
@@ -1,22 +1,30 @@
 @import "../theme-base";
 
 
-
 .dropdown-menu {
   padding-top: 0;
   padding-bottom: 0;
   border: none;
   top: 0;
-}
-.dropdown-item {
-  border-top-left-radius: $border-radius;
+  border-radius: 0;
 }
 
+@include media-breakpoint-up(md) {
+  .dropdown-menu {
+    box-shadow: inset 0px 0px 1px 0px $black-2;
+  }
+  .dropdown-item {
+    @include hover-focus() {
+      background-color: rgba($gray, $bth-light-alpha-2);
+    }
+  }
+}
+
+
 @include media-breakpoint-down(md) {
-   .dropdown-menu {
+  .dropdown-menu {
     transform: none !important;
     grid-column: 1 / 3;
-     border-radius: $border-radius-zero;
   }
   .dropdown-menu.show {
     position: relative !important;
@@ -30,7 +38,7 @@
     @include hover() {
       color: $white;
       background: $green;
-      box-shadow: 0px 0px 1px 0px #131213;
+      box-shadow: 0px 0px 1px 0px $black-2;
     }
   }
 }
@@ -57,14 +65,10 @@
     }
   }
 }
+
 .nav-item.dropdown {
   display: grid;
   grid-template-columns: 1fr max-content;
-  .btn-split {
-    @include hover-focus-active {
-      box-shadow: inset 0px 0px 1px 0px $black-2;
-    }
-  }
 }
 
 .nav-item.dropdown.show {
@@ -120,6 +124,7 @@
     text-decoration: none;
     color: $black;
     box-shadow: 0px 0px 1px 0px #131213;
+
     &::before {
       background-color: $red;
     }
@@ -153,12 +158,11 @@
 }
 
 
-
 @include media-breakpoint-up(lg) {
   .nav-item .submenu {
     position: absolute;
     left: 100%;
-    top: -7px;
+    top: -2px;
   }
 }
 
@@ -175,7 +179,7 @@
   }
 }
 
-.btn-split  {
+.btn-split {
   display: block;
   width: 30px;
   position: relative;
@@ -183,9 +187,17 @@
   background-color: transparent;
   border: none;
   border-left: 1px solid rgba($gray, $bth-light-alpha-2);
-  &_inner {
-    border-top-right-radius: $border-radius;
+  @include hover-focus-active {
+    box-shadow: inset 0px 0px 1px 0px $black-2;
   }
+  &_inner {
+    @include hover-focus() {
+      border-bottom: 1px solid rgba($black-2, $bth-light-alpha-2);
+      border-left: 1px solid rgba($black-2, $bth-light-alpha-2);
+      box-shadow: none;
+    }
+  }
+
   &.dropdown-toggle {
     &::after {
       right: auto;
