--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -8,9 +8,6 @@
 @import "posts/posts-base";
 @import "slider";
 @import "ads";
-@import "labels/tag";
-@import "labels/badges";
-@import "labels/label";
 @import "buttons/buttons";
 @import "buttons/btn-icon";
 @import "comments";
@@ -19,8 +16,8 @@
 @import "tabs.menu";
 @import "section";
 @import "sidebar";
-@import "fighter-card/fighter-card";
-@import "fighter-card/fighter-info";
+@import "fighter-card";
+@import "labels";
 @import "navbar";
 @import "container";
 @import "footer";
