--- a/src/styles/components/posts/post-header.scss
+++ b/src/styles/components/posts/post-header.scss
@@ -39,6 +39,8 @@
   display: flex;
   align-items: center;
   @include media-breakpoint-down(sm) {
-    font-size: $font-size-md;
+    &_sm {
+      font-size: $font-size-base;
+    }
   }
 }
