--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,14 +3,20 @@ $black: #180706;
 $black-2: #131213;
 $black-200: #2C2C2C;
 $green: #54B869;
+$skyblue: #35B8E0;
 $gray: #CFC5C5;
 $gray-200: #ECECEC;
 $gray-300: #E9E9E9;
 $gray-400: #E6E7EA;
+$gray-500: #D2D9ED;
 $gray-600: #B4B7BD;
+$gray-700: #A4ABC1;
 $white: #fff;
+$white-100: #F4F7FF;
 $white-200: #f5f5f5;
 $blue-dark: #2A3042;
+$blue-dark-100: #575F78;
+
 
 
 $font-weight-medium: 500;
@@ -24,6 +30,7 @@ $font-size-base: 1rem;
 $font-size-xl: 35rem / $font-size-value;
 $font-size-lg: 25rem / $font-size-value;
 $font-size-md: 20rem / $font-size-value;
+$font-size-sm-big: 18rem / $font-size-value;
 $font-size-sm: 14rem / $font-size-value;
 $font-size-ms: 12rem / $font-size-value;
 $font-size-xs: 10rem / $font-size-value;
@@ -92,7 +99,10 @@ $theme-colors: (
         "gray": $gray,
         "white": $white,
         "blue-dark": $blue-dark,
+        "blue-dark-100": $blue-dark-100,
+        "skyblue": $skyblue,
         "gray-600": $gray-600,
+        "gray-700": $gray-700,
 );
 
 $gutter-width: 10rem / $font-size-value;
@@ -117,6 +127,9 @@ $spacers: (
         3: $spacer,
         4: ($spacer * 1.5),
         5: ($spacer * 3),
+        "indent-15": ($spacer * 0.75),
+        "indent-25": ($spacer * 1.25),
+        "indent-45": ($spacer * 2.25),
         "small-1" : (15rem / $font-size-value),
         "big-1": (50rem / $font-size-value),
         "space-md": (75rem / $font-size-value),
