--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -8,8 +8,7 @@
 @import "posts/posts-base";
 @import "slider";
 @import "ads";
-@import "buttons/buttons";
-@import "buttons/btn-icon";
+@import "buttons";
 @import "comments";
 
 @import "widget";
@@ -19,5 +18,6 @@
 @import "fighter-card";
 @import "labels";
 @import "navbar";
+@import "timetable";
 @import "container";
 @import "footer";
