--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $gray: #CFC5C5;
 $gray-200: #ECECEC;
 $gray-300: #E9E9E9;
 $gray-400: #E6E7EA;
+$gray-450: #DFDCE8;
 $gray-500: #D2D9ED;
 $gray-600: #B4B7BD;
 $gray-700: #A4ABC1;
