--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -16,8 +16,8 @@
 @import "section";
 @import "sidebar";
 @import "fighter-card";
-@import "labels";
 @import "navbar";
-@import "timetable";
+@import "table";
+@import "labels";
 @import "container";
 @import "footer";
