--- a/src/styles/components/labels/label-emoji.scss
+++ b/src/styles/components/labels/label-emoji.scss
@@ -14,7 +14,7 @@
   }
   @include media-breakpoint-down(sm) {
     padding: 10px;
-    .icon-victories {
+    .icon {
       width: 31px;
       height: 31px;
     }
