--- a/src/styles/components/table/list-table.scss
+++ b/src/styles/components/table/list-table.scss
@@ -1,15 +1,8 @@
 @import '../../theme-base';
 
-.table {
-  display: grid;
-  grid-gap: 20px;
-  border: 1px solid $gray-200;
-  border-radius: $border-radius;
-  padding-bottom: 20px;
-  @include media-breakpoint-down(sm) {
-    padding-top: 30px;
-  }
-  &__row {
+.table.list-fights {
+
+  .table__row {
     display: grid;
     grid-template-columns: 1fr 2.5fr 4.5fr 2fr 1fr 1fr;
     grid-gap: 20px;
@@ -23,42 +16,23 @@
       padding-right: 15px;
     }
   }
-  &__row-header {
+  .table__row-header {
     background-color: rgba(#EFEFEF, 0.21);
     padding: 20px 25px 15px;
     @include media-breakpoint-down(sm) {
       display: none;
     }
   }
-  &__col {
-    color: $blue-dark;
-  }
 
-  &__title {
-    font-size: $font-size-sm;
-    color: rgba($black, 0.4);
-  }
-  &__text {
-    font-size: $font-size-sm;
-    font-weight: $font-weight-medium;
-    @include media-breakpoint-down(sm) {
-      font-weight: $font-weight-normal;
-    }
-    @each $color, $value in $theme-colors {
-      &.#{$color} {
-        color: $value;
-      }
-    }
-  }
   @include media-breakpoint-down(sm) {
-    &__row {
+    .table__row {
       grid-gap: 10px;
       &:not(&:last-child) {
         padding-bottom: 20px;
         border-bottom: 1px solid $gray-300;
       }
     }
-    &__col {
+    .table__col {
       &_event-mobile {
         grid-column: 1 / 3;
         max-width: 200px;
