--- a/src/styles/components/table/time-table.scss
+++ b/src/styles/components/table/time-table.scss
@@ -5,9 +5,23 @@
   .table__row {
     grid-template-columns: min-content min-content 2fr 2fr;
     grid-gap: 40px;
+    @include media-breakpoint-down(sm) {
+      grid-template-columns: min-content min-content 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
     svg {
-      width: 20px;
-      height: 20px;
+      max-width: 20px;
+      width: 100%;
+      height: 100%;
+      max-height: 20px;
+    }
+  }
+  .table__col {
+    &.grid-col {
+      display: grid;
+      grid-auto-flow: column;
+      grid-template-columns: 20px 1fr;
+      grid-column-gap: 10px;
     }
   }
 }
