fix post-preview in main page discussions

--- a/src/styles/components/buttons/timetable-btn.scss
+++ b/src/styles/components/buttons/timetable-btn.scss
@@ -14,10 +14,10 @@
       }
     }
   }
-
   &:focus {
     box-shadow: none;
   }
-
-
+  @include media-breakpoint-down(sm) {
+    font-size: $font-size-sm;
+  }
 }
