--- a/src/styles/components/table/index.scss
+++ b/src/styles/components/table/index.scss
@@ -1,4 +1,8 @@
 @import "timetable-nav";
+@import "filter-nav";
 @import "table";
 @import "time-table";
 @import "list-table";
+@import "duel-card";
+@import "duel-table";
+@import "fighter-table";
