--- a/src/styles/components/labels/tag.scss
+++ b/src/styles/components/labels/tag.scss
@@ -69,8 +69,8 @@
 @function url-encode($string) {
   $map: (
           "%": "%25",
-          "<": "%3C",
-          ">": "%3E",
+          "<": "%3c",
+          ">": "%3e",
           //" ": "%20",
           "!": "%21",
           "*": "%2A",
@@ -103,11 +103,12 @@
 }
 
 @function inline-svg($string) {
-  @return url('data:image/svg+xml;charset=UTF-8,#{url-encode($string)}');
+  @return url('data:image/svg+xml;charset=UTF-8,#{$string}');
 }
 
 @mixin tagLeft($color) {
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='14' height='28' viewBox='0 0 14 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M8.77102 2.67369C10.0043 1.2908 11.7692 0.5 13.6221 0.5H112C115.59 0.5 118.5 3.41015 118.5 7V21C118.5 24.5899 115.59 27.5 112 27.5H13.6221C11.7692 27.5 10.0043 26.7092 8.77103 25.3263L2.52826 18.3263C0.329708 15.8611 0.329707 12.1389 2.52826 9.67369L8.77102 2.67369Z' stroke='#{url-encode("#{$color}")}'/%3e%3c/svg%3e ");
+  //background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='14' height='28' viewBox='0 0 14 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M8.77102 2.67369C10.0043 1.2908 11.7692 0.5 13.6221 0.5H112C115.59 0.5 118.5 3.41015 118.5 7V21C118.5 24.5899 115.59 27.5 112 27.5H13.6221C11.7692 27.5 10.0043 26.7092 8.77103 25.3263L2.52826 18.3263C0.329708 15.8611 0.329707 12.1389 2.52826 9.67369L8.77102 2.67369Z' stroke='#{url-encode("#{$color}")}'/%3e%3c/svg%3e");
+  background-image: inline-svg("<svg width='14' height='28' viewBox='0 0 14 28' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M8.77102 2.67369C10.0043 1.2908 11.7692 0.5 13.6221 0.5H112C115.59 0.5 118.5 3.41015 118.5 7V21C118.5 24.5899 115.59 27.5 112 27.5H13.6221C11.7692 27.5 10.0043 26.7092 8.77103 25.3263L2.52826 18.3263C0.329708 15.8611 0.329707 12.1389 2.52826 9.67369L8.77102 2.67369Z' stroke='#{url-encode("#{$color}")}'/></svg>");
 }
 
 @each $color, $value in $theme-colors {
