--- a/src/styles/components/posts/post-preview.scss
+++ b/src/styles/components/posts/post-preview.scss
@@ -246,6 +246,7 @@
   display: inline-flex;
   font-size: $font-size-sm;
   color: $gray;
+  align-items: center;
   &_sm {
     @include media-breakpoint-down(sm) {
       font-size: $font-size-ms;
