--- a/src/styles/components/table/duel-table.scss
+++ b/src/styles/components/table/duel-table.scss
@@ -8,10 +8,23 @@
       grid-gap: 15px;
     }
     @include media-breakpoint-down(sm) {
-      grid-template-columns: 1fr;
-      grid-gap: 30px;
-      .table__col:first-child {
-        display: none;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+
+      .table__col {
+        &:first-child {
+          display: none;
+        }
+        &_versus {
+          grid-column: 1 / 3;
+        }
+        &_round {
+          grid-row: 2;
+        }
+        &_time {
+          grid-column: 1;
+          grid-row: 3;
+        }
       }
     }
   }
