--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -104,6 +104,7 @@ $theme-colors: (
         "blue-dark": $blue-dark,
         "blue-dark-100": $blue-dark-100,
         "skyblue": $skyblue,
+        "gray-450": $gray-450,
         "gray-600": $gray-600,
         "gray-700": $gray-700,
 );
