--- a/src/styles/overrides/overrides.scss
+++ b/src/styles/overrides/overrides.scss
@@ -15,15 +15,11 @@ h1, .h1 {
 }
 
 
-
-
 .card-img-overlay {
   padding: calc(30rem / 16);
 }
 
-.progress-bar {
-  border-radius: $border-radius-es;
-}
+
 
 .breadcrumb {
   background-color: transparent;
@@ -67,6 +63,25 @@ h1, .h1 {
 }
 
 
+.custom-radio {
+  &.w-20 {
+    padding-left: 0;
+    .custom-control-input {
+      width: 20px;
+    }
+
+    .custom-control-label {
+      padding-left: 30px;
+      &::before,
+      &::after {
+        width: 20px;
+        height: 20px;
+        top: 0;
+        left: 0;
+      }
+    }
+  }
+}
 
 
 
