--- a/src/styles/components/labels/badges.scss
+++ b/src/styles/components/labels/badges.scss
@@ -2,14 +2,31 @@
 
 .badge-status {
   font-size: 11px;
-  font-weight: 700;
+  font-weight: $font-weight-bold;
   color: $black;
   text-transform: uppercase;
-  position: relative;
-  padding-left: 14px;
   letter-spacing: 2px;
 
-  &:before {
+
+  &.active {
+    &:before {
+      background-color: $red;
+    }
+  }
+  @each $color, $value in $theme-colors {
+    &.#{$color} {
+      &:before {
+        background-color: $value;
+      }
+    }
+  }
+}
+
+.badge-state,
+.badge-status {
+  position: relative;
+  padding-left: 14px;
+  &::before {
     content: '';
     position: absolute;
     left: 0;
@@ -20,10 +37,14 @@
     background-color: $gray;
     border-radius: 50%;
   }
+}
 
+.badge-state {
+  font-size: $font-size-md;
+  font-weight: $font-weight-medium;
   &.active {
-    &:before {
-      background-color: $red;
+    &::before {
+      background-color: $green;
     }
   }
 }
