--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $red: #D44E49;
+$red-100: #FF4B55;
 $black: #180706;
 $black-2: #131213;
 $black-200: #2C2C2C;
@@ -12,6 +13,7 @@ $gray-450: #DFDCE8;
 $gray-500: #D2D9ED;
 $gray-600: #B4B7BD;
 $gray-700: #A4ABC1;
+$gray-800: #808286;
 $white: #fff;
 $white-100: #F4F7FF;
 $white-200: #f5f5f5;
@@ -56,6 +58,7 @@ $border-radius-sm:            5rem / $font-size-value;
 $border-radius-es:            3rem / $font-size-value;
 $tag-border-radius: 7rem / $font-size-value;
 $avatar-radius: 7rem / $font-size-value;
+$avatar-radius-lg: 20rem / $font-size-value;
 
 
 $border-radius-zero: 0;
@@ -97,6 +100,7 @@ $nav-bth-padding-x:                0;
 
 $theme-colors: (
         "red": $red,
+        "red-100": $red-100,
         "green": $green,
         "black": $black,
         "gray": $gray,
