--- a/src/styles/components/profile/user-profile.scss
+++ b/src/styles/components/profile/user-profile.scss
@@ -11,16 +11,48 @@
   }
   @include media-breakpoint-down(sm) {
     grid-row-gap: 10px;
+    grid-template-columns: 80px 1fr;
+    align-items: start;
   }
-  &__text-wrapper {
-    display: grid;
-    grid-auto-flow: column;
-    grid-column-gap: 5px;
+  @media screen and (max-width: 375px){
+    grid-column-gap: 20px;
+  }
+
+  &__row {
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    @include media-breakpoint-down(sm) {
+      align-items: start;
+      &.row-sm-revert {
+        flex-direction: column-reverse;
+        align-items: start;
+      }
+      &.column-sm-full {
+        grid-column: 1 / 3;
+      }
+      &.row-sm-2 {
+        grid-row: 2;
+      }
+      &.row-sm-3 {
+        grid-row: 3
+      }
+    }
+    @media screen and (max-width: 375px){
+      flex-direction: column;
+    }
+
+    &:not(:last-child) {
+      padding-bottom: 15px;
+      border-bottom: 1px solid $gray-300;
+    }
   }
   &__row-image {
     grid-column: 1;
     grid-row: 1 / 4;
+    @include media-breakpoint-down(sm) {
+      grid-row: 1;
+    }
   }
 
   &__image-wrapper {
@@ -49,23 +81,7 @@
     grid-row-gap: 20px;
   }
 
-  &__row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    @include media-breakpoint-down(sm) {
-      align-items: start;
-      &.row-sm-revert {
-        flex-direction: column-reverse;
-        align-items: start;
-      }
-    }
 
-    &:not(:last-child) {
-      padding-bottom: 15px;
-      border-bottom: 1px solid $gray-300;
-    }
-  }
 
   &__text {
     @each $color, $value in $theme-colors {
